fix: Display invisible `.HeroBlock__image`s

--- a/src/scss/HeroBlock.scss
+++ b/src/scss/HeroBlock.scss
@@ -88,7 +88,6 @@
 	}
 
 	.HeroBlock__image > img {
-		visibility: hidden;
 		pointer-events: initial;
 		position: absolute;
 		top: 0;
